--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
     "@types/facebook-js-sdk": "^3.3.1",
+    "angularx-social-login": "^3.3.1",
     "ng6-toastr-notifications": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
