--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/facebook-js-sdk": "^3.3.1",
     "angularx-social-login": "^3.3.1",
     "ng6-toastr-notifications": "^1.0.4",
+    "ngx-cookie-service": "^10.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
