integrating youtube API

--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@angular/router": "~10.0.5",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@types/facebook-js-sdk": "^3.3.1",
+    "@types/gapi": "0.0.39",
+    "@types/gapi.auth2": "0.0.52",
     "angularx-social-login": "^3.3.1",
+    "ng-gapi": "0.0.94",
     "ng6-toastr-notifications": "^1.0.4",
     "ngx-cookie-service": "^10.1.1",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^10.10.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
