--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.52",
     "angularx-social-login": "^3.3.1",
+    "jquery": "^3.5.1",
     "ng-gapi": "0.0.94",
     "ng6-toastr-notifications": "^1.0.4",
     "ngx-cookie-service": "^10.1.1",
